--- a/html/Formação.html
+++ b/html/Formação.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Minha<span class="white"> Formação</span></h1>
     <br>
-    <a class= menu href="/html/index.html">Menu Principal</a>
+    <a class= menu href="/index.html">Menu Principal</a>
 </header>
     <div class="conteudo">
         <div class="fundo">
