--- a/html/Portifólio.html
+++ b/html/Portifólio.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Meu <span class="white"> Portifólio</span></h1>
     <br>
-    <a class= menu href="/html/index.html">Menu Principal</a>
+    <a class= menu href="/index.html">Menu Principal</a>
 </header>
 
     <p>Estou na faculdade e aprendendo programação a pouco tempo, então possuo poucos materias e trabalhos de minha autoria. Mas esses são alguns já realizados:</p>
