--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio pessoal</title>
-    <link rel="stylesheet" href="/css/portifólioPessoal.css">
+    <link rel="stylesheet" href="css/portifólioPessoal.css">
 </head>
 <body>
 
@@ -15,10 +15,10 @@
     <br>
     <ul>
 
-    <li><a href="/html/sobreMim.html">Sobre mim</a></li>
-    <li><a href="/html/Formação.html">Minha formação</a></li>
-    <li><a href="/html/Portifólio.html">Meu portifólio</a></li>
-    <li><a href="/html/Contato.html">Contato</a></li>
+    <li><a href="html/sobreMim.html">Sobre mim</a></li>
+    <li><a href="html/Formação.html">Minha formação</a></li>
+    <li><a href="html/Portifólio.html">Meu portifólio</a></li>
+    <li><a href="html/Contato.html">Contato</a></li>
 
     </ul>
     </div>
@@ -26,14 +26,14 @@
 
 <section>
 
-    <img class= fotocapa src="/imagens portifólio/ft2.jpeg" alt="foto de capa" width="400">
+    <img class= fotocapa src="imagens portifólio/ft2.jpeg" alt="foto de capa" width="400">
 
 </section>  
 
 <footer>
     <div class="rodapé">
     <p id="direitos">Todos direitos reservados - Sandro Junio F Miranda</p>
-    <img class="insta" src="/imagens portifólio/Instagram_icon.png" alt="logo instagram" width="25">
+    <img class="insta" src="imagens portifólio/Instagram_icon.png" alt="logo instagram" width="25">
     <a class= nomeInsta href="https://www.instagram.com/sandroo_xd" target="_blank">sandroo_xd</a>
     </div>
 </footer>
