--- a/html/sobreMim.html
+++ b/html/sobreMim.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
-    <link rel="stylesheet" href="css/sobreMim.css">
+    <link rel="stylesheet" href="/css/sobreMim.css">
 </head>
 <body>
 <header>
     <h1>Sobre<span class="white"> Mim </span></h1>
     <br>
-    <a class= menu href="index.html">Menu Principal</a>
+    <a class= menu href="/index.html">Menu Principal</a>
 </header>
 <div class="conteudo">
         <div class="jogos">
